# Parallel_Computing

./: .gitignore
Fase 5/: CMakeLists.txt  main  main.c  resultados.csv
Fase3/: main.c
Fase6/: main.cu  result.csv
Practica1/: P1  P1.c
Practica2/: p2.c
Practica3/: main.c  p3_1.c  procesos.c
Practica5/: hola_mpi.c  main.c
Practica6/: HolaMundo.cu  TiposKernel.cu  main.cu
Test_01/: CMakeLists.txt
